# prtty

./: README.md  cabal.project  example.prtty  flake.nix  prtty.cabal
app/: Main.hs
src/: Cmd.hs  Options.hs  PDL.hs  PrettyPrint.hs  Reduce.hs  Runtime.hs  VT.hs
src/Compiler/: Compiler.hs  Internal.hs
src/Compiler/Internal/: References.hs  Rewrite.hs  Sizes.hs  Types.hs
src/PDL/: Internal.hs  Types.hs
src/Parser/: AST.hs  Internal.hs  Parser.hs
src/Runtime/: Duration.hs  Instructions.hs  Run.hs  Value.hs
src/Runtime/Internal/: Exec.hs  IO.hs  Navigation.hs  Output.hs  Positioning.hs  Primitive.hs  Run.hs  Style.hs  Types.hs
test/: CompilerSpec.hs  PDLSpec.hs  ParserSpec.hs  RuntimeSpec.hs  VTSpec.hs
test/Compiler/: BuiltinSpec.hs  Helpers.hs  ReferencesSpec.hs  RewriteSpec.hs
test/Runtime/: Helpers.hs  NavigationSpec.hs  PositioningSpec.hs
