cabal-version: 3.0
name: prtty
version: 0.1.0.0
license:
author: John Cinnamond
maintainer: john@cinnamond.me.uk
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common shared
  ghc-options: -Wall
  build-depends:
    base ^>=4.21.0.0,
    bytestring ^>=0.12.1.0,
    containers ^>=0.7,
    mtl ^>=2.3.1,
    text ^>=2.1.1,
    vector ^>=0.13.2.0,

  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    MultiWayIf
    MultilineStrings
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

library
  import: shared
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Cmd
    Compiler.Compiler
    Compiler.Internal
    Compiler.Internal.References
    Compiler.Internal.Rewrite
    Compiler.Internal.Sizes
    Compiler.Internal.Types
    Options
    Parser.AST
    Parser.Internal
    Parser.Parser
    PrettyPrint
    Runtime.Instructions
    Runtime.Internal.Navigation
    Runtime.Internal.Run
    Runtime.Internal.Types
    Runtime.Run
    Runtime.Value
    VT

  build-depends:
    megaparsec ^>=9.7.0,
    optparse-applicative ^>=0.19.0.0,
    terminal-size ^>=0.3.4,
    unix ^>=2.8.7.0,

executable prtty-app
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded
  build-depends:
    optparse-applicative ^>=0.19.0.0,
    prtty,
    unix ^>=2.8.7.0,

test-suite prtty-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  other-modules:
    Compiler.BuiltinSpec
    Compiler.Helpers
    Compiler.ReferencesSpec
    Compiler.RewriteSpec
    CompilerSpec
    ParserSpec
    Runtime.NavigationSpec

  build-depends:
    hspec ^>=2.11.12,
    hspec-megaparsec ^>=2.2.1,
    megaparsec ^>=9.7.0,
    prtty,
    raw-strings-qq ^>=1.1,
